--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd study-groups-server && npm install && node server.js",
-    "heroku-postbuild": "cd study-groups-client && npm install && npm run build"
+    "start": "cd study-groups-server && node server.js",
+    "heroku-postbuild": "cd study-groups-server && npm install && npm run build"
     
   },
   "author": "",
