--- a/study-groups-server/package.json
+++ b/study-groups-server/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^2.0.0-alpha.24",
     "evergreen-ui": "^4.2.0",
     "json-server": "^0.14.0",
+    "mongoose": "^5.3.7",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-local-form": "^0.4.4",
